# skit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  babel.cfg  pyproject.toml
.github/: codecov.yml
.github/actions/install-hyperfine/: action.yml
.github/workflows/: benchmark-compare.yml  benchmark-nightly.yml  benchmark.yml  ci.yml  docs.yml  mutation.yml  release.yml
benchmarks/: README.md  __init__.py  __main__.py  budgets.py  budgets.toml  compare.py  datasets.py  envinfo.py  envspec.py  hyperfine.py  parsers.py  pipeline.py  results.py
benchmarks/fixtures/: __init__.py  noop.js  noop.py  noop.sh  sources.py
benchmarks/micro/: bench_analyzers.py  bench_launch.py  bench_render.py  bench_store.py
benchmarks/suites/: __init__.py  _env.py  _run.py  footprint.py  imports.py  micro.py  rss.py  run_overhead.py  scale.py  startup.py  syscalls.py  tui.py  tui_probe.py
docs/: .gitignore  README.md  mutation-ledger.md  next.config.mjs  package-lock.json  package.json  source.config.ts  ux-redesign.md
docs/app/: global.css
docs/app/[lang]/: layout.tsx
docs/app/[lang]/(home)/: layout.tsx  page.tsx  redirect-to-docs.tsx
docs/app/[lang]/docs/: layout.tsx
docs/app/[lang]/docs/[[...slug]]/: page.tsx
docs/assets/demo/: Dockerfile  demo.bashrc  demo.tape  demo.vimrc  shots.tape
docs/components/: mdx.tsx  provider.tsx  search.tsx
docs/content/docs/: ai-agents.mdx  cli.mdx  configuration.mdx  environment.mdx  index.mdx  meta.json  parameters.mdx  prompts.mdx  script-types.mdx  troubleshooting.mdx
docs/demo/: Dockerfile  demo.bashrc  demo.tape
docs/demo/scripts/en/: my_program.sh  my_script_2.py
docs/demo/scripts/zh/: my_script_2.py
docs/design/: benchmarks.md  multilang.md  path.md  prompt.md
docs/lib/: i18n.ts  layout.shared.tsx  shared.ts  source.ts
docs/public/: index.html
docs/scripts/: check-links.mjs  sync-readme.mjs
scripts/: check_mutation_stats.py  i18n.py  i18n_coverage.py  record_demo.sh  serve_preview.py
skills/skit/: SKILL.md
src/skit/: __init__.py  agentskill.py  analysis.py  analyzer.py  argspec.py  argstate.py  argv_text.py  atomic.py  callmatch.py  cli.py  config.py  editor.py  flows.py  healthcheck.py  i18n.py  inlineform.py  kindnames.py  launcher.py  metawriter.py  models.py  params.py  paths.py  pep723.py  promptform.py  reconcile.py  rewrite.py  shim.py  store.py  theme.py  tokens.py  tui.py  tui_add.py  tui_footer.py  tui_form.py  tui_health.py  tui_layout.py  tui_pathpick.py  tui_prefs.py  tui_prompt.py  tui_runner.py  (+2 more)
src/skit/langs/: __init__.py  base.py  launch.py  registry.py
src/skit/langs/fish/: __init__.py  analyzer.py  cli_reader.py
src/skit/langs/javascript/: __init__.py  analyzer.py  cli_reader.py  deps.py  inject.py  io.py
src/skit/langs/powershell/: __init__.py  cli_reader.py
src/skit/langs/prompt/: __init__.py  analyzer.py  render.py  text.py
src/skit/langs/python/: __init__.py  analyzer.py  argspec.py  metawriter.py  reconcile.py  shim.py
src/skit/langs/shell/: __init__.py  analyzer.py  cli_reader.py  inject.py  normalize.py
src/skit/locales/: skit.pot
src/skit/skills/skit/: SKILL.md
tests/: conftest.py  test_add_feedback_contracts.py  test_add_lane_contracts.py  test_add_no_source.py  test_add_review_contracts.py  test_add_review_validation.py  test_add_validation_contracts.py  test_agent_install.py  test_agent_skill.py  test_agentskill_mut.py  test_analysis_mut.py  test_analyzer.py  test_analyzer_signals.py  test_argspec.py  test_argspec_click_typer.py  test_argspec_mut.py  test_argstate_mut.py  test_argv_text.py  test_atomic.py  test_atomic_mut.py  test_base_mut.py  test_benchmarks_tooling.py  test_brace_delivery_cov.py  test_callmatch.py  test_cli.py  test_cli_cov.py  test_cli_design_cov.py  test_cli_gaps_cov.py  test_cli_mut.py  test_cli_mut_part01.py  test_cli_mut_part02.py  test_cli_mut_part03.py  test_cli_mut_part04.py  test_cli_mut_part05.py  test_cli_mut_part06.py  test_config.py  test_config_cmd.py  test_config_mut.py  test_corpus.py  test_declared_params.py  (+148 more)
tests/corpus/: 01_simple_const.py  02_pep723_block.py  03_shebang_coding.py  04_docstring_module.py  05_future_imports.py  06_main_guard.py  07_negative_numbers.py  08_annotated_assign.py  09_bool_flags.py  10_multiple_inputs.py  11_input_in_loop.py  12_input_cast.py  13_input_in_function.py  14_secret_names.py  15_multiline_paren_const.py  16_trailing_comments.py  17_unicode_cjk.py  18_windows_paths.py  19_string_mentions_input.py  20_decorated_toplevel.py  21_class_based.py  22_argparse_framework.py  23_walrus_and_fstring.py  24_global_statement.py  25_try_except_top.py  26_while_input_sentinel.py  27_dict_config_untouched.py  28_input_comprehension.py  29_main_guard_reversed.py  30_pep723_tool_skit.py  31_async_script.py  32_no_trailing_newline.py  33_crlf_endings.py  34_tab_indent.py
tests/corpus/fish/: 01_env_idioms.fish  02_argparse.fish  03_quoting.fish  04_block_nesting.fish  05_reads_and_consts.fish  06_cjk.fish
tests/corpus/js/: 01_const_numbers.mjs  02_const_string_bool.mjs  03_template_excluded.mjs  04_object_array_excluded.mjs  05_let_var_demoted.mjs  06_destructuring_excluded.mjs  07_json_escaping.mjs  08_cjk_emoji.mjs  09_parseargs_inline.mjs  10_parseargs_identifier.mjs  11_parseargs_spread.mjs  12_shebang_block.mjs  13_crlf.mjs
tests/corpus/prompt/: 01_basic.prompt.md  02_crlf.prompt.md  03_cjk_emoji.prompt.md  04_injection.prompt.md  05_reserved.prompt.md
tests/corpus/shell/: 01_plain_consts.sh  02_declarations.sh  03_envdefaults.sh  04_suppression.sh  05_self_idiom.sh  06_reads.sh  07_read_clustered.sh  08_data_reads.sh  09_heredoc.sh  10_demotions.sh  11_hints_argv.sh  12_hints_selfloc.sh  13_function_bodies.sh  14_retry_prompts.sh  15_dynamic_prompt.sh  16_cjk_emoji.sh  17_crlf.sh  18_no_trailing_newline.sh  19_zsh_dialect.sh  20_secret_names.sh  21_mixed_all.sh  22_function_read_order.sh  23_selfloc_const.sh  24_quoting_payloads.sh
tests/corpus/ts/: 01_typed_consts.ts  02_parseargs.ts  03_ts_features.ts
(+9 files in other folders)
