[project]
name = "skit"
version = "0.0.1"
description = "Script launcher and parameter manager: pick a script, fill in a form, run — no more opening an IDE just to tweak constants."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["script", "launcher", "uv", "tui", "pep723", "script-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
# Upper caps let a lockfile-less `uv tool install skit` refuse a future breaking major
# (or minor, for pre-1.0 deps). Reproducible dev/CI installs are hash-pinned by uv.lock.
dependencies = [
    "typer>=0.26,<1",
    "platformdirs>=4.10,<5",
    "tomli-w>=1.2,<2",
    "textual>=8.2,<9",
    "rich>=15,<16",
]

[project.urls]
Repository = "https://github.com/user/skit"
Issues = "https://github.com/user/skit/issues"

[project.optional-dependencies]
serve = ["textual-serve>=1.1,<2"]

[project.scripts]
skit = "skit.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7.1,<8",
    "textual-serve>=1.1,<2",
    "ty>=0.0.56,<0.1",
    "ruff>=0.15,<0.16",
    "mutmut>=3.6,<4",
    "zizmor>=1.26,<2",
    "babel>=2.18,<3",  # dev-only: extract/update/compile .po↔.mo (runtime uses stdlib gettext)
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config"
xfail_strict = true
filterwarnings = ["error::DeprecationWarning:skit"]

[tool.coverage.run]
source = ["skit"]
branch = true
parallel = true

[tool.coverage.paths]
source = ["src/skit", "*/site-packages/skit"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
    'if __name__ == "__main__":',
]

[tool.ty.rules]
all = "error"

[tool.ty.environment]
python-version = "3.12"
python-platform = "all"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
    "PL",     # pylint
    "TRY",    # tryceratops
    "PERF",   # perflint
    "S",      # flake8-bandit
]
ignore = [
    "PLR0913",  # too many arguments — CLI entry points legitimately take many options
    "PLR2004",  # magic values in comparisons — noisy in parsers
    "TRY003",   # long exception messages — user-facing i18n messages
    "B008",     # function calls in defaults — the canonical typer.Option/Argument pattern
    "PLC0415",  # imports inside functions — deliberate lazy imports for CLI startup speed
    "E501",     # line length — the formatter owns wrapping; source-string gettext msgids can't be split
]

[tool.ruff.lint.per-file-ignores]
"src/skit/tui.py" = [
    "RUF012",  # Textual BINDINGS/CSS class attributes are the framework's documented pattern
]
"src/skit/i18n.py" = [
    "PLW0603", # module-level localization singleton is intentional
]
"src/skit/cli.py" = [
    "PLR0912", # typer command bodies with many options naturally branch a lot
    "PLR0915",
]
"scripts/serve_preview.py" = [
    "S104",    # dev-only preview server binds 0.0.0.0 on purpose
    "S108",    # dev-only demo sandbox under /tmp on purpose
]
"scripts/i18n.py" = [
    "S603",    # dev-only maintainer tool: fixed-arg subprocess to pybabel
]
"tests/**" = [
    "S101",    # assert is the point of tests
    "S108",    # tests use fixed /tmp fixtures as opaque path strings
    "S310",    # tests exercise file:// URLs against local fixtures
    "S603",    # subprocess calls with fixed args in tests
    "PLR0912", # long/branchy test helpers are fine
    "PLR0915",
    "SIM117",  # nested with statements readable in tests
]
"tests/corpus/**" = ["ALL"]  # corpus files are verbatim analyzer inputs, not code style subjects

[tool.mutmut]
paths_to_mutate = ["src/skit/"]
tests_dir = ["tests/"]
